--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<footer class="site-footer">
 				<div class="container shrinked">
 					
-					<form action="#" class="subscribe-form">
+					<form action="subscribe" class="subscribe-form" data-netlify="true">
 						<input type="text" placeholder="Enter your email to join our newsletter">
 						<i class="fa fa-envelope"></i>
 						<input type="submit" value="Subscribe!">
